--- a/Projekt PY/templates/index.html
+++ b/Projekt PY/templates/index.html
@@ -16,9 +16,9 @@
         </ul>
     </nav>
 
-    <main>
-        <h1>Mājaslapa</h1>
-        <p><h2>...</h2></p>
+  <main>
+        <h1>Dzīvnieku patversme AnimalCare</h1>
+        <p><h2>Pieņemam apmeklētājus katru dienu no 9:00 līdz 18:00.</h2></p>
     </main>
 
 </body>
