--- a/Projekt PY/templates/index.html
+++ b/Projekt PY/templates/index.html
@@ -15,10 +15,103 @@
             <li><a class="nav-link" href=""></a></li>
         </ul>
     </nav>
-
-  <main>
-        <h1>Dzīvnieku patversme AnimalCare</h1>
-        <p><h2>Pieņemam apmeklētājus katru dienu no 9:00 līdz 18:00.</h2></p>
+    <main>
+      <div class="container">
+        <div class="my-container">
+            <p><h1>Dzīvnieku patversme AnimalCare</h1></p>
+            <p><h2>Pieņemam apmeklētājus katru dienu no 9:00 līdz 18:00.</h2></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+          </div>
+          <div class="my-container2">
+            <p><h1>Mūsu dzīvnieki</h1></p>
+            <p><h2>"Grafiks"</h2></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+            <p><h1>dghetge</h1></p>
+          </div>
+         </div> 
+         
+     <nav class="site-header bg-steel">
+            <ul class="navbar-nav">
+                <li><a class="nav-link" href="kontakti">Kontakti</a></li>
+                <li><a class="nav-link" href="Partneri">Partneri</a></li>
+                <li><a class="nav-link" href="hjhjhj"></a></li>
+            </ul>
+     </nav>
     </main>
 
 </body>
