--- a/Projekt PY/templates/index.html
+++ b/Projekt PY/templates/index.html
@@ -7,111 +7,34 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
-
-    <nav class="site-header bg-steel">
+  <nav class="site-header bg-steel">
         <ul class="navbar-nav">
             <li><a class="nav-link" href="/">Mājaslapa</a></li>
-            <li><a class="nav-link" href="/page2">Page2</a></li>
-            <li><a class="nav-link" href=""></a></li>
+            <li><a class="nav-link" href="/page2">Mūsu dzīvnieki</a></li>
+            <li><a class="nav-link" href="/panemtdzivnieku">Paņemt dzīvnieku</a></li>
+            <li><a class="nav-link" href="<div class="navbar"><div class="dropdown"><button class="dropbtn">Kā mums palīdzēt?
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="/ziedosana">Ziedošana</a>
+                <a href="/klutparpartneri">Kļūt par dalībnieku</a>
+              </div>
+              <li><img src="{{ url_for('static', filename = 'PAW_Logo.png') }}" alt="AnimalCare" width="70" height="70"></li>
+            </div>
+          </div></a></li></div></a>
+                
         </ul>
-    </nav>
     <main>
       <div class="container">
         <div class="my-container">
             <p><h1>Dzīvnieku patversme AnimalCare</h1></p>
             <p><h2>Pieņemam apmeklētājus katru dienu no 9:00 līdz 18:00.</h2></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
           </div>
           <div class="my-container2">
             <p><h1>Mūsu dzīvnieki</h1></p>
             <p><h2>"Grafiks"</h2></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
-            <p><h1>dghetge</h1></p>
           </div>
          </div> 
-         
-     <nav class="site-header bg-steel">
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="kontakti">Kontakti</a></li>
-                <li><a class="nav-link" href="Partneri">Partneri</a></li>
-                <li><a class="nav-link" href="hjhjhj"></a></li>
-            </ul>
-     </nav>
     </main>
 
 </body>
