--- a/Projekt PY/templates/page2.html
+++ b/Projekt PY/templates/page2.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
-    <nav class="site-header bg-steel">
+     <nav class="site-header bg-steel">
         <ul class="navbar-nav">
             <li><a class="nav-link" href="/">Mājaslapa</a></li>
-            <li><a class="nav-link" href="/page2">Page2</a></li>
-            <li><a class="nav-link" href=""></a></li>
+            <li><a class="nav-link" href="/page2">Mūsu dzīvnieki</a></li>
+            <li><a class="nav-link" href="/panemtdzivnieku">Paņemt dzīvnieku</a></li>
+            <li><a class="nav-link" href="<div class="navbar"><div class="dropdown"><button class="dropbtn">Kā mums palīdzēt?
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="/ziedosana">Ziedošana</a>
+                <a href="/klutparpartneri">Kļūt par dalībnieku</a>
+              </div>
+              <li><img src="{{ url_for('static', filename = 'PAW_Logo.png') }}" alt="AnimalCare" width="70" height="70"></li>
+            </div>
+          </div></a></li></div></a>
+                
         </ul>
-    </nav>
 
     <main>
         <h1>Page2</h1>
