--- a/Projekt PY/static/main.css
+++ b/Projekt PY/static/main.css
@@ -89,7 +89,7 @@ nav ul {
   }
 
 body {
-    background: #f0fff7;
+    background: #d5f5e3;
     color: #000000;
     margin-left: 0pt;
 }
@@ -100,10 +100,11 @@ h1 {
     text-transform: none;
     color: #093d0d;
     text-align: justify;
-    line-height: 1.4;
+    line-height: 1;
     letter-spacing: 0px;
     text-decoration: none;
     margin-left: 30px;
+    margin-right: 30px;
     margin-top: 30px;
 }
 h2 {    
@@ -134,21 +135,17 @@ button {
     margin-left: 70px;
 }
 
-#myImage {
-    margin-top: 1000;
-    margin-left: 1000;
-}
-
 .container {
     display: flex;
     gap: 10px;
 }
 
   .my-container, .my-container2 {
-    background-color: #dbdbce;
+    background-color: #c8c8c1;
     padding: 20px; 
     border: 2px solid #dabfbf;
-    width: 900px; 
+    width: 900px;
+    height: 510px; 
     margin: 40px; 
   }
 
@@ -158,12 +155,13 @@ button {
 }
 
   .new-container, .new-container2 {
-    background-color: #eaefe9;
+    background-color: #c8c8c1;
     padding: 20px; 
     border: 2px solid #dabfbf;
-    width: 500px; 
-    height: 600px;
+    width: 550px; 
+    height: 610px;
     margin: 40px; 
+    
   }
 
   .Ncontainer {
@@ -178,6 +176,24 @@ button {
     width: 300px; 
     height: 300px;
     margin: 40px; 
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 5);
+  }
+  .N2container {
+    display: flex;
+    gap: 0px;
+    flex-wrap: nowrap;
+  }
+  
+  .N2-container1, .N2-container2 {
+    background-color: #eaefe9;
+    padding: 20px; 
+    border: 2px solid #dabfbf;
+    width: 300px; 
+    height: 300px;
+    margin: 40px; 
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 5);
   }
 .container3{
   display: flex;
@@ -185,52 +201,41 @@ button {
 }
 
   .my-container3 {
-    background-color: #f0fff7;
+    background-color: #d5f5e3;
     padding: 20px; 
     border: none;
     width: 300px; 
     height: 300px;
     margin-left: 1000px; 
   }
-
-
-.article-title {
-    color: #000000;
+.container4{
+  background-color: #f4fff9;
+    padding: 30px; 
+    border: none;
+    width: 330px; 
+    height: 210px;
+    margin-left: 20px; 
 }
 
-.article-title:hover {
-    color: #000000;
-    text-decoration: none;
-}
 
-.article-content {
-    margin-left: 20px;
-    white-space:pre-line;
+.container5{
+  background-color: #00b30f;
+  padding: 20px; 
+  border: none;
+  width: 1300px; 
+  height: 900px;
+  margin: 40px; 
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 3);
 }
-
-.article-img {
-    height: 65px;
-    width: 65px;
-    margin-right: 16px;
+.container6{
+    background-color: #c8c8c1;
+    padding: 20px; 
+    border: 2px solid #dabfbf;
+    width: 900px;
+    height: 80px; 
+    margin: 40px; 
 }
-
-.article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3;
-}
-
-.article-metadata a:hover {
-    color: #000000;
-    text-decoration: none;
-}
-
-.article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-}
-
 
 main ul {
     list-style: disc !important;
