--- a/Projekt PY/templates/klutparpartneri.html
+++ b/Projekt PY/templates/klutparpartneri.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziedošana</title>
+    <title>Kļut par dalībnieku</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
@@ -27,9 +27,25 @@
     </nav>
 
     <main>
-        <h1></h1>
+        <h1>Ja vēlāties pievienoties mūsu brīvprātīgo komandai, </h1>
+          <p><h1>vai kļūt par partneri, aizpildiet zemāk esošo formu:</p></h1>
         <div class="Ncontainer">
             <div class="N-container">
+              <form method="post">
+                <label for="username">Vārds:</label>
+                <input type="text" name="username" required>
+                <br>
+                <br>
+                <label for="e-mail">E-mail:</label>
+                <input type="e-mail" name="e-mail" required>
+                <br>
+                <br>
+                <label for="password">Parole:</label>
+                <input type="password" name="password" required>
+                <br>
+                <br>
+                <button type="submit">Reģistrēties</button>
+            </form>
 
             </div>
         </div>        
