--- a/Projekt PY/templates/panemtdzivnieku.html
+++ b/Projekt PY/templates/panemtdzivnieku.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mājaslapa</title>
+    <title>Paņemt dzīvnieku</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
@@ -40,22 +40,16 @@
        </ul>
        <br>
        <h1>Mūsu kontaktinformācija:</h1>
-     <div class="container">
-        <div class="my-container">
+     <div class="container6">
             <p><h2>Tālrunis: +37167293819</h2></p>
             <p><h2>E-pasts: animalcare@gmail.lv</h2></p>
             <p><h2>Adrese: Jaunā iela 1</h2></p>
-
-        </div>
      </div>
      <div class="container3">
       <div class="my-container3">
         <img src="{{ url_for('static', filename='cat-silhouette-black.png') }}" width="450" height="450">
         </div>
-        <div class="my-container32">
-          <img src="{{ url_for('static', filename='cat_PNG50522.png') }}" width="450" height="450">
-          </div>
      </div>   
     </main>
   </body>
-</html>        
+</html>          
